--- a/Guess My Number/style.css
+++ b/Guess My Number/style.css
@@ -16,6 +16,7 @@ body {
   color: #eee;
   background-color: #222;
   /* background-color: #60b347; */
+  overflow: hidden;
 }
 
 /* LAYOUT */
@@ -116,4 +117,13 @@ h1 {
 
 .label-score {
   margin-bottom: 2rem;
+}
+
+footer{
+  position: relative;
+  bottom: 6rem;
+  text-align: center;
+}
+h2{
+  font-size: 1.5rem;
 }
