--- a/Pig Game/style.css
+++ b/Pig Game/style.css
@@ -169,3 +169,10 @@ main {
 .hidden{
   display: none;
 }
+
+/* MEDIA QUERIES */
+@media screen and (max-width: 480px) {
+  html {
+    font-size: 32%;
+  }
+}
